--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -32,6 +32,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="#E5E5E5"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="io.intelehealth.client.activities.identification_activity.IdentificationActivity"
         tools:showIn="@layout/activity_identification">
@@ -55,33 +56,37 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:textColor="#828282"
-                    android:text="Please fill your details" />
-
+                    android:textAppearance="@style/please_fill"
+                    android:lineSpacingExtra="3sp"
+                    android:translationY="-1.6sp"
+                    android:gravity="top"
+                    android:text="@string/please_fill_your_details" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:layout_marginTop="10dp"
-                    android:textStyle="bold"
+                    android:layout_marginTop="20dp"
                     android:drawableStart="@drawable/assignment"
                     android:drawableLeft="@drawable/assignment"
                     android:drawablePadding="10dp"
                     android:text="@string/personal_information"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
+                    android:textAppearance="@style/sign_up_title" />
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
+                    android:padding="10dp"
+                    android:elevation="40dp"
+                    android:background="@drawable/rectangle_2">
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="10dp"
                         android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -102,7 +107,8 @@
                                 android:inputType="textCapWords"
                                 android:maxLength="25"
                                 android:maxLines="1"
-                                android:singleLine="true" />
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input"/>
 
                         </android.support.design.widget.TextInputLayout>
 
@@ -122,7 +128,8 @@
                                 android:maxLength="25"
                                 android:maxLines="1"
                                 android:singleLine="true"
-                                android:tag="@string/tag_optional" />
+                                android:tag="@string/tag_optional"
+                                android:textAppearance="@style/sign_up_input"/>
 
                         </android.support.design.widget.TextInputLayout>
 
@@ -142,7 +149,8 @@
                                 android:inputType="textCapWords"
                                 android:maxLength="25"
                                 android:maxLines="1"
-                                android:singleLine="true" />
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input"/>
 
                         </android.support.design.widget.TextInputLayout>
 
@@ -193,7 +201,7 @@
                         </android.support.design.widget.TextInputLayout>-->
 
                         <Space
-                            android:layout_width="15dp"
+                            android:layout_width="20dp"
                             android:layout_height="20dp" />
 
                         <RadioGroup
@@ -211,9 +219,9 @@
                                 android:layout_weight="1"
                                 android:drawableStart="@drawable/icon_male"
                                 android:drawableLeft="@drawable/icon_male"
-                                android:drawablePadding="10dp"
+                                android:drawablePadding="5dp"
                                 android:text="@string/identification_screen_checkbox_male"
-                                android:textSize="@dimen/id_screen_text_size" />
+                                android:textAppearance="@style/sign_up_gender" />
 
                             <RadioButton
                                 android:id="@+id/identification_gender_female"
@@ -222,9 +230,9 @@
                                 android:layout_weight="1"
                                 android:drawableStart="@drawable/icon_female"
                                 android:drawableLeft="@drawable/icon_female"
-                                android:drawablePadding="10dp"
+                                android:drawablePadding="5dp"
                                 android:text="@string/identification_screen_checkbox_female"
-                                android:textSize="@dimen/id_screen_text_size" />
+                                android:textAppearance="@style/sign_up_gender"/>
 
                         </RadioGroup>
 
@@ -247,7 +255,8 @@
                                 android:imeOptions="actionUnspecified"
                                 android:inputType=""
                                 android:maxLines="1"
-                                android:singleLine="true" />
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input"/>
                         </android.support.design.widget.TextInputLayout>
 
                     <!--    <android.support.design.widget.TextInputLayout
@@ -307,7 +316,8 @@
                                     android:maxLength="10"
                                     android:maxLines="1"
                                     android:singleLine="true"
-                                    android:tag="@string/tag_optional" />
+                                    android:tag="@string/tag_optional"
+                                    android:textAppearance="@style/sign_up_input"/>
 
                             </android.support.design.widget.TextInputLayout>
                         </LinearLayout>
@@ -332,15 +342,31 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:layout_marginTop="10dp"
-                    android:textStyle="bold"
                     android:drawableStart="@drawable/icon_account_details"
                     android:drawableLeft="@drawable/icon_account_details"
                     android:drawablePadding="10dp"
                     android:text="@string/login_details"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                    android:textAppearance="@style/sign_up_title" />
                 <Space
                     android:layout_width="20dp"
                     android:layout_height="20dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp"
+                    android:background="@drawable/rectangle_2"
+                    android:elevation="40dp">
+
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -355,17 +381,19 @@
                         android:inputType="phone"
                         android:maxLines="1"
                         android:maxLength="10"
-                        android:nextFocusForward="@id/password" />
+                        android:nextFocusForward="@id/password"
+                        android:textAppearance="@style/sign_up_input"/>
 
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
+                    android:layout_margin="2dp"
                     android:text="@string/username_condition"
-                    android:textSize="10sp"
-                    android:textColor="#828282"/>
+                    android:textAppearance="@style/login_details_conditions"
+                    android:lineSpacingExtra="2sp"
+                    android:translationY="-1sp"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -380,7 +408,8 @@
                         android:inputType="textPassword"
                         android:maxLines="1"
                         android:maxLength="12"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:textAppearance="@style/sign_up_input"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -397,18 +426,21 @@
                         android:inputType="textPassword"
                         android:maxLines="1"
                         android:maxLength="12"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:textAppearance="@style/sign_up_input"/>
 
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
+                    android:layout_margin="2dp"
                     android:text="@string/password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit"
-                    android:textSize="10sp"
-                    android:textColor="#828282"/>
-
+                    android:textAppearance="@style/login_details_conditions"
+                    android:lineSpacingExtra="2sp"
+                    android:translationY="-1sp"/>
+            </LinearLayout>
+            </LinearLayout>
                 <Space
                     android:layout_width="20dp"
                     android:layout_height="20dp" />
@@ -417,16 +449,30 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:layout_marginTop="10dp"
-                    android:textStyle="bold"
                     android:drawableStart="@drawable/icon_address"
                     android:drawableLeft="@drawable/icon_address"
                     android:drawablePadding="10dp"
                     android:text="@string/address_details"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                    android:textAppearance="@style/sign_up_title"/>
                 <Space
                     android:layout_width="20dp"
                     android:layout_height="20dp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/rectangle_2"
+                    android:elevation="40dp"
+                    android:padding="10dp">
+
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -444,7 +490,8 @@
                         android:maxLength="50"
                         android:maxLines="2"
                         android:singleLine="false"
-                        android:tag="@string/tag_optional" />
+                        android:tag="@string/tag_optional"
+                        android:textAppearance="@style/sign_up_input"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -463,7 +510,8 @@
                         android:inputType="textCapWords"
                         android:maxLength="50"
                         android:maxLines="2"
-                        android:tag="@string/tag_optional" />
+                        android:tag="@string/tag_optional"
+                        android:textAppearance="@style/sign_up_input"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -480,7 +528,8 @@
                         android:imeOptions="actionUnspecified"
                         android:inputType="textCapWords"
                         android:maxLength="25"
-                        android:maxLines="1" />
+                        android:maxLines="1"
+                        android:textAppearance="@style/sign_up_input"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -522,7 +571,8 @@
                                     android:imeOptions="actionUnspecified"
                                     android:inputType="textCapWords"
                                     android:maxLines="1"
-                                    android:text="@string/identification_screen_prompt_country" />
+                                    android:text="@string/identification_screen_prompt_country"
+                                    android:textAppearance="@style/sign_up_input"/>
 
                                 <Spinner
                                     android:id="@+id/spinner_country"
@@ -568,7 +618,8 @@
                                     android:imeOptions="actionUnspecified"
                                     android:inputType="textCapWords"
                                     android:maxLines="1"
-                                    android:text="@string/identification_screen_prompt_state" />
+                                    android:text="@string/identification_screen_prompt_state"
+                                    android:textAppearance="@style/sign_up_input"/>
 
                                 <Spinner
                                     android:id="@+id/spinner_state"
@@ -608,7 +659,8 @@
                             android:imeOptions="actionUnspecified"
                             android:inputType="textCapWords"
                             android:maxLines="1"
-                            android:text="@string/district_municipal_corporations" />
+                            android:text="@string/district_municipal_corporations"
+                            android:textAppearance="@style/sign_up_input"/>
 
                         <Spinner
                             android:id="@+id/spinner_district"
@@ -643,7 +695,8 @@
                             android:imeOptions="actionUnspecified"
                             android:inputType="textCapWords"
                             android:maxLines="1"
-                            android:text="@string/location" />
+                            android:text="@string/location"
+                            android:textAppearance="@style/sign_up_input"/>
 
                         <Spinner
                             android:id="@+id/spinner_location"
@@ -656,8 +709,6 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="20dp"
                     android:layout_height="wrap_content">
 
                     <EditText
@@ -671,23 +722,23 @@
                         android:inputType="number"
                         android:maxLength="6"
                         android:maxLines="1"
-                        android:tag="@string/tag_optional" />
+                        android:tag="@string/tag_optional"
+                        android:textAppearance="@style/sign_up_input"/>
 
 
                 </android.support.design.widget.TextInputLayout>
 
-
+            </LinearLayout>
+            </LinearLayout>
                 <Button
                     android:id="@+id/btnSave"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/button_bg_rounded_blue"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginStart="15dp"
-                    android:textStyle="bold"
+                    android:background="@drawable/rectangle_7"
+                    android:layout_margin="15dp"
                     android:text="@string/save"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textAppearance="@style/sign_up_save"
+                  />
 
 <!--                <android.support.design.widget.TextInputLayout-->
 <!--                    android:layout_width="match_parent"-->
