--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,5 +83,41 @@
     <!--Style changes related to the New Figma by venu N-->
 
 
+    <style name="sign_up_title">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
 
+    <style name="please_fill">
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textColor">#828282</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="sign_up_input">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="login_details_conditions">
+        <item name="android:textSize">10sp</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textColor">#828282</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+    <style name="sign_up_gender">
+        <item name="android:textSize">13sp</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textColor">#373737</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
+
+    <style name="sign_up_save">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/lato_medium</item>
+    </style>
 </resources>
