Username is mobile no. logic added.

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -352,8 +352,10 @@
                         android:digits="0123456789+"
                         android:hint="@string/username"
                         android:imeOptions="actionNext"
-                        android:inputType="phone"
+                        android:inputType="none"
                         android:maxLines="1"
+                        android:enabled="false"
+                        android:textColor="#50000000"
                         android:maxLength="10"
                         android:nextFocusForward="@id/password" />
 
