--- a/app/src/main/res/layout/activity_splash_activity.xml
+++ b/app/src/main/res/layout/activity_splash_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/ic_splash_bg"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -29,21 +29,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/intelesafe"
+            android:fontFamily="@font/lato_bold"
             android:textColor="@color/white"
-            android:textStyle="bold"
             android:layout_gravity="center"
-            app:fontFamily="@fonts/Lato-Regular"
             android:textSize="36sp" />
 
-        <TextView
+        <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/stay_aware_stay_safe"
             android:textColor="@color/white"
             android:textStyle="bold"
-            app:fontFamily="@fonts/Lato-Regular"
-            android:textSize="24sp" />
+            android:fontFamily="@font/lato_bold"
+            android:textSize="24sp" />-->
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_stay_safe"/>
 
     </LinearLayout>
 
