--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -465,7 +465,8 @@
                                 android:layout_below="@+id/Help_Text"
                                 android:layout_marginStart="10sp"
                                 android:background="@android:color/transparent"
-                                android:drawableStart="@drawable/ic_phone_forwarded_24px"
+                                android:drawableStart="@drawable/ic_icons8_whatsapp"
+                                android:drawableLeft="@drawable/ic_icons8_whatsapp"
                                 android:drawablePadding="10sp"
                                 android:fontFamily="@font/lato_medium"
                                 android:gravity="start|center"
@@ -508,6 +509,17 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textSize="20sp" />
 
+                <TextView
+                    android:id="@+id/tv_no_visit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/your_data_overview"
+                    android:layout_marginTop="10sp"
+                    android:padding="10sp"
+                    android:gravity="center"
+                    android:textColor="@null"
+                    android:text="You don't have any visit."
+                    android:textAppearance="@style/home_no_visit" />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerview_data"
                     android:layout_width="match_parent"
