--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,4 +120,10 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/lato_medium</item>
     </style>
+
+    <style name="home_no_visit">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
 </resources>
