--- a/app/src/main/res/layout/activity_physical_exam.xml
+++ b/app/src/main/res/layout/activity_physical_exam.xml
@@ -39,6 +39,7 @@
                 android:id="@+id/btn_back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:visibility="gone"
                 android:layout_gravity="center_vertical">
 
                 <ImageView
@@ -59,6 +60,7 @@
                 android:layout_gravity="center_vertical"
                 android:includeFontPadding="false"
                 android:text="@string/txt_self_assessment"
+                android:layout_marginStart="15dp"
                 />
 
         </LinearLayout>
