--- a/app/src/main/res/layout/fragment_physical_exam.xml
+++ b/app/src/main/res/layout/fragment_physical_exam.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/white_rectangular_bg"
-            android:layout_marginBottom="10dp"
+            android:paddingBottom="10dp"
             >
             <ExpandableListView
                 android:id="@+id/physical_exam_expandable_list_view"
