--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -79,7 +79,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="10dp"
+                    android:paddingHorizontal="10dp"
+                    android:paddingBottom="10dp"
                     android:elevation="40dp"
                     android:background="@drawable/white_rectangular_bg">
 
