--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -25,6 +25,8 @@ Github: prajwalmw
         android:id="@+id/scroll_new"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/lin_upload"
+        android:overScrollMode="never"
         android:fillViewport="true">
 
     <LinearLayout
@@ -590,6 +592,76 @@ Github: prajwalmw
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
+
+
+
+        <android.support.v7.widget.CardView
+        android:id="@+id/mental_help_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="40dp"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="false"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/padding_card"
+        android:layout_marginBottom="26dp"
+        app:cardCornerRadius="10sp"
+        >
+
+        <RelativeLayout
+            android:id="@+id/mental_help_relative"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/mental_help_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Help"
+                android:paddingVertical="12dp"
+                android:background="@color/white"
+                android:textColor="@color/txt_sub_header_color"
+                android:paddingStart="20dp"
+                android:textSize="16sp"
+                android:fontFamily="@font/lato_bold"/>
+
+
+            <TextView
+                android:id="@+id/mental_visit_help_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:fontFamily="@font/lato_regular"
+                android:text="@string/if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394"
+                android:paddingTop="@dimen/padding_card"
+                android:layout_below="@id/mental_help_title"
+                android:textSize="14sp"
+                android:textColor="@color/txt_sub_header_color"
+                android:padding="@dimen/padding_card"
+                />
+
+            <Button
+                android:id="@+id/mental_Help_Watsapp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/mental_visit_help_text"
+                android:text="+91 9825989750"
+                android:paddingStart="20sp"
+                android:textSize="@dimen/text_18sp"
+                android:layout_marginBottom="15sp"
+                android:fontFamily="@font/lato_medium" android:textColor="@color/txt_sub_header_color"
+                android:textStyle="bold"
+                android:paddingHorizontal="20sp"
+                android:background="@android:color/transparent"
+                android:drawableStart="@drawable/ic_icons8_whatsapp"
+                android:gravity="start|center"
+                android:layout_marginStart="10sp"
+                android:drawablePadding="10sp" />
+
+            <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
         <!--Patient History Card contains text-->
         <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -1272,11 +1344,12 @@ Github: prajwalmw
     </ScrollView>
 
 <LinearLayout
+    android:id="@+id/lin_upload"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_alignParentBottom="true"
-    android:layout_marginBottom="50dp">
+    android:layout_margin="10dp">
 
    <!-- <Button
         android:id="@+id/button_upload"
@@ -1301,7 +1374,6 @@ Github: prajwalmw
             android:id="@+id/button_upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="447dp"
             android:background="@drawable/rectangle_7"
             android:text="@string/submit_visitSummary_Button"
             android:textAlignment="center"
