Chages related to the UAT by Venu N on 07/04/2020.

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -90,6 +90,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:layout_weight="1"
+
                         android:orientation="vertical">
 
                         <android.support.design.widget.TextInputLayout
@@ -478,7 +479,9 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true"
+                    >
 
                     <EditText
                         android:id="@+id/password"
@@ -497,7 +500,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
 
                     <EditText
                         android:id="@+id/cpassword"
