--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
                 android:hint="@string/prompt_email"
                 android:textColorHint="@color/font_black_5"
                 android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
+                android:inputType="number"
                 android:maxLength="100"
                 android:theme="@style/MyEditTextTheme"
                 android:textColor="@color/white"
