--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,7 +38,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_marginEnd="5dp"
-                        android:layout_toStartOf="@+id/user_logout"
+                        android:layout_toStartOf="@+id/rel_user_lang"
                         android:fontFamily="@font/lato_bold"
                         android:includeFontPadding="false"
                         android:text="@string/prajwal_waingankar"
@@ -115,6 +115,28 @@
                         </ImageView>
 
                     </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/rel_user_lang"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_toStartOf="@+id/user_logout"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/oval_home_notification">
+
+                        <ImageView
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/change_lang">
+
+                        </ImageView>
+
+                    </RelativeLayout>
+
+
+
 
                     <RelativeLayout
                         android:id="@+id/user_logout"
