--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -1,6 +1,363 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#f0f0f0">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
+        app:title="@string/choose_your_language"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        android:elevation="3dp">
+
+        <TextView
+            android:id="@+id/tv_toolbarTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/choose_your_language"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+    </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_hindi"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_hindi"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="अ"
+                    android:visibility="gone"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:textSize="32sp"/>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="हिंदी"
+                    android:layout_marginStart="30dp"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/lato_bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_english"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_english"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="A"
+                    android:layout_marginStart="20dp"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textSize="32sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="English"
+                    android:layout_marginStart="30dp"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_marathi"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_marathi"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="मी"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textSize="32sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="मराठी"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:layout_marginStart="30dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_bangali"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            android:visibility="gone"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_bangali"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="मी"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textSize="32sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="বাংলা"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:layout_marginStart="30dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_gujarati"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            android:visibility="gone"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_gujarati"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="मी"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textSize="32sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="પાસ"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:layout_marginStart="30dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_malayalam"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            android:visibility="gone"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_malayalam"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="मी"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textSize="32sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ഉം"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:layout_marginStart="30dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_tamil"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            android:visibility="gone"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_tamil"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="मी"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textSize="32sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="தமிழ்"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:layout_marginStart="30dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_kannada"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:cardCornerRadius="18dp"
+            android:visibility="gone"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:id="@+id/rl_kannada"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="मी"
+                    android:textColor="@color/font_black_0"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textSize="32sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ಕನ್ನಡ"
+                    android:textColor="@color/font_black_0"
+                    android:textSize="16sp"
+                    android:layout_marginStart="30dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:background="@drawable/rectangle_7"
+        android:text="Save"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:textAppearance="@style/sign_up_save" />
+
+</RelativeLayout>
+
+
+
+
+<!--
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -197,21 +554,21 @@
         app:srcCompat="@drawable/ic_done_24dp"
         />
 
-<!--    <Button-->
-<!--        android:id="@+id/button_select"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="5dp"-->
-<!--        android:background="@drawable/button_bg_rounded_blue"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:text="@string/select_language"-->
-<!--        android:visibility="gone"-->
-<!--        android:layout_margin="15dp"-->
-<!--        android:textAlignment="center"-->
-<!--        android:textColor="@android:color/white"-->
-<!--        android:textSize="16sp"-->
-<!--        android:textStyle="bold"-->
-<!--        style="@style/SelectableItemBackground"-->
-<!--        android:foreground="?android:attr/selectableItemBackground" />-->
+&lt;!&ndash;    <Button&ndash;&gt;
+&lt;!&ndash;        android:id="@+id/button_select"&ndash;&gt;
+&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;
+&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;
+&lt;!&ndash;        android:layout_marginBottom="5dp"&ndash;&gt;
+&lt;!&ndash;        android:background="@drawable/button_bg_rounded_blue"&ndash;&gt;
+&lt;!&ndash;        android:layout_alignParentBottom="true"&ndash;&gt;
+&lt;!&ndash;        android:text="@string/select_language"&ndash;&gt;
+&lt;!&ndash;        android:visibility="gone"&ndash;&gt;
+&lt;!&ndash;        android:layout_margin="15dp"&ndash;&gt;
+&lt;!&ndash;        android:textAlignment="center"&ndash;&gt;
+&lt;!&ndash;        android:textColor="@android:color/white"&ndash;&gt;
+&lt;!&ndash;        android:textSize="16sp"&ndash;&gt;
+&lt;!&ndash;        android:textStyle="bold"&ndash;&gt;
+&lt;!&ndash;        style="@style/SelectableItemBackground"&ndash;&gt;
+&lt;!&ndash;        android:foreground="?android:attr/selectableItemBackground" />&ndash;&gt;
 
-</RelativeLayout>
+</RelativeLayout>-->
